# litra-control

./: CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENCE  README.md  build-linux.sh  dprint.json  eslint.config.js  litra.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  timrogers-litra-autotoggle.txt  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.cursor/: design.md  requirements.md  tasks.md
.github/workflows/: build.yml  release.yml
src/: App.vue  index.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/packaging/: litra-control.desktop  postinst  prerm
src-tauri/scripts/: 99-litra-control.rules
src-tauri/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  tray.rs
src-tauri/src/camera_monitor/: mod.rs  monitor.rs  strategies.rs
src-tauri/src/commands/: brightness_commands.rs  camera_commands.rs  device_commands.rs  mod.rs  power_commands.rs  temperature_commands.rs
src-tauri/src/device/: manager.rs  mod.rs  types.rs
src-tauri/src/error/: mod.rs
src/components/: CameraPermissionHelp.vue  CameraPreview.vue  CustomSlider.vue  CustomTitlebar.vue  LitraLogo.vue
src/components/device/: BrightnessSlider.vue  DeviceCard.vue  DeviceStatus.vue  PowerToggle.vue  TemperatureSlider.vue  index.ts
src/components/ui/alert-dialog/: AlertDialogAction.vue  AlertDialogCancel.vue
src/components/ui/dropdown-menu/: DropdownMenuCheckboxItem.vue  DropdownMenuItem.vue  DropdownMenuRadioItem.vue  DropdownMenuSubTrigger.vue
src/components/ui/select/: SelectContent.vue  SelectTrigger.vue
src/components/ui/sonner/: Sonner.vue
src/components/ui/switch/: Switch.vue
src/composables/: index.ts  useCamera.ts  useCameraMonitor.ts  useDevice.ts  usePresets.ts
src/lib/: utils.ts
src/router/: index.ts
src/stores/: device.ts  index.ts  settings.ts
src/types/: device.ts  index.ts
src/views/: HomeView.vue  SettingsView.vue
