[package]
name = "litra"
version = "0.1.0"
authors = [ "you" ]
edition = "2021"
description = "A Tauri App"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "litra_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
litra = "2.3.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1.0", features = [ "full" ] }
