[package]
name = "litra-control"
version = "0.1.0"
authors = [ "Yasir Shariff" ]
edition = "2021"
description = "A modern Linux desktop application for controlling Logitech Litra devices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "litra_control_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = [ "serde" ] }
confy = "1.0"
# Camera auto-toggle dependencies
inotify = "0.11.0"
litra = "2.3.1"
notify = "8.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri = { version = "2", features = [ "tray-icon" ] }
tauri-plugin-opener = "2"
tokio = { version = "1.0", features = [ "full" ] }
toml = "0.9" # For config tests
uuid = { version = "1.0", features = [ "v4" ] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-cli = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
